--- a/src/main.scss
+++ b/src/main.scss
@@ -14,3 +14,160 @@ $text-color: #4C4C4C !default;
 $dark-color: #000000 !default;
 $emphasis-color: #f3c642 !default;
 $secondary-emphasis-color: #e78352 !default;
+
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+html {
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 67.5%;	// 1rem = 10px
+}
+body {
+	font-size: 1.6rem;
+	background-color: #d7d7d7;
+}
+ul {
+	list-style: none;
+	background-color: white;
+	padding: 0;
+	margin: 2em auto;
+	width: 26em;
+	box-shadow: 1px 1px 10px rgba(0,0,0,0.6);
+	border-radius: 0.2em;
+	overflow-y: scroll;
+	&::before {
+		content: '';
+		display: block;
+		top: 2em;
+		left: 0;
+		width: 100%;
+		height: 2em;
+		background-color: $main-color;
+	}
+}
+li {
+	margin: 0.1em 1em;
+	position: relative;
+	color: $text-color;
+
+	&:not(:last-of-type)::after {
+		content: '';
+		position: absolute;
+		width: 100%;
+		border-bottom: 1px solid rgba(0,0,0,0.1);
+		left: 0;
+		bottom: 0;
+	}
+}
+.user {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	div {
+		margin: 0 0.2em;
+		height: 6em;
+	}
+}
+.user__initials {
+	display: flex;
+	align-items: center;
+	> div {
+		border-radius: 5ch;
+		width: 5ch;
+		height: 5ch;
+		font-size: 2rem;
+		font-style: bold;
+		text-align: center;
+		line-height: 5ch;
+		text-transform: uppercase;
+		color: white;
+		background-color: #abcabf;
+	}
+}
+.user__userinfo {
+	flex-grow: 2;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	p {
+		padding: 0;
+		margin: 0;
+		font-size: 1.3rem;
+	}
+	p:first-child {
+		font-size: 2rem;
+		max-width: 25ch;
+	}
+}
+.user__edit {
+	display: flex;
+	align-items: center;
+	button {
+		font-size: 1.3rem;
+		font-weight: 600;
+		text-transform: uppercase;
+		padding: 0.2em;
+		padding-bottom: 0.25em;
+		width: 5ch;
+		display: inline-block;
+		border: 2px solid $text-color;
+		background-color: transparent;
+		color: inherit;
+		cursor: hand;
+		cursor: pointer;
+		transition: background-color 300ms ease-in-out 0s, color 300ms ease-in-out 0s;
+		box-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+		&:hover {
+			background-color: $text-color;
+			color: white;
+		}
+	}
+}
+
+.expand {
+	display: flex;
+	flex-direction: column;
+	padding: 0 1em;
+	p {
+		text-transform: uppercase;
+	}
+	span {
+		font-size: 1.2rem;
+		text-transform: uppercase;
+		font-weight: bold;
+		padding-right: 1em;
+	}
+	> div {
+		margin: 0 0.2em;
+		margin-bottom: 0.8em;
+	}
+}
+.expand__username {
+	display: flex;
+	align-items: baseline;
+	justify-content: space-between;
+	p {
+		display: inline-block;
+		padding-right: 1em;
+	}
+	input[type='text'] {
+		font-size: 1.6rem;
+		padding: 0.2em;
+		display: inline-block;
+		border: 2px solid $text-color;
+		background-color: transparent;
+		color: inherit;
+		width: 16em;
+	}
+}
+.expand__roles {
+	display: flex;
+	align-items: baseline;
+	justify-content: space-between;
+	label {
+		display: block;
+		width: 16em;
+	}
+}
